--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --white:#fff;
     --bg-color:#f4f6fa;
     --primary-text-color:#313e51;
+    --secundary-text-color:#626c7f;
     --purple: #a729f5;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
 }
@@ -60,8 +61,23 @@ main{
 
 }
 
-main h1{
+.boas_vindas{
+    margin-bottom: 40px;
+}
+
+.boas_vindas h1{
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
+    margin-bottom: 16px;
+}
+.boas_vindas h1 strong{
+    font-weight: 500;
+}
+
+.boas_vindas p{
+    color: var(--secundary-text-color);
+    font-size: 14px;
+    line-height: 150%;
+    font-style: italic;
 }
