1 parte da estilização dos botões de assunto

--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@
 }
 
 :root{
+    --bg-html:#fff1e9;
+    --bg-css:#e0fdef;
+    --bg-js:#ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
+    --shadow: 0px 16px 40px 0px rgba(143, 60, 193, 0.14);
     --white:#fff;
+    --button-bg:#fff;
     --bg-color:#f4f6fa;
     --primary-text-color:#313e51;
     --secundary-text-color:#626c7f;
@@ -57,8 +63,7 @@ header{
 }
 
 main{
-    padding: 32px 4px;
-
+    padding: 32px 24px;
 }
 
 .boas_vindas{
@@ -80,4 +85,35 @@ main{
     font-size: 14px;
     line-height: 150%;
     font-style: italic;
+}
+
+.assuntos{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.assuntos button{
+    border: none;
+    background: var(--button-bg);
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
+}
+
+.botao_html div{
+    background: var(--bg-html);
+}
+
+.botao_css div{
+    background: var(--bg-css);
+}
+.boato_js div{
+    background: var(--bg-js);
+}
+.botao_acessibilidade div{
+    background: var(--bg-acessibilidade);
 }
