--- a/style.css
+++ b/style.css
@@ -145,6 +145,24 @@ main{
         margin-block: 81px;
     }
 
+    .tema{
+        gap: 16px;
+    }
+
+    .tema img{
+        width: 24px;
+    }
+
+    .tema button{
+        width: 48px;
+        height: 28px;
+    }
+
+    .tema button div{
+        width: 20px;
+        height: 20px;
+    }
+
     main{
         display: flex;
         max-width: 1160px;
