HTML do header finalizado

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ main{
 .botao_css div{
     background: var(--bg-css);
 }
-.boato_js div{
+.botao_js div{
     background: var(--bg-js);
 }
 .botao_acessibilidade div{
