Estilização da página quase completa

--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -100,11 +100,19 @@ main{
     padding: 32px 24px;
 }
 
+.pergunta{
+    margin-bottom: 40px;
+}
+
+
 .pergunta p{
     font-style: italic;
     font-size: 14px;
-    color: var(--secundary-text-color);
-    margin-bottom: 12px;
+    background: var(--button-bg);
+    height: 16px;
+    padding: 4px;
+    border-radius: 999px ;
+
 }
 
 .pergunta h2{
@@ -127,6 +135,8 @@ main{
     width: 60%;
     background: var(--purple);
     border-radius: 999px;
+    margin-bottom: 12px;
+
 }
 
 .alternativas form{
@@ -139,11 +149,56 @@ main{
     display: block;
     background: var(--button-bg);
     padding: 12px;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
+    color: var(--primary-text-color);
 }
+
+.alternativas label:has(input:checked){
+
+}
+
 
 .alternativas input{
     display: none;
 }
+
+.alternativas div{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+}
+
+.alternativas div span{
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: var(--bg-color);
+    border-radius: 5px;
+    color: var(--secundary-text-color);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.alternativas button{
+    padding: 12px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+
+    font-size:18px;
+    font-weight: 500;
+}
+
+
 
 @media (min-width:1100px){
     .tema{
