--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -13,6 +13,8 @@
     --bg-acessibilidade: #f6e7ff;
     --shadow: 0px 16px 40px 0px rgba(143, 60, 193, 0.14);
     --white:#fff;
+    --green:#26d782;
+    --red:#ee5454;
     --button-bg:#fff;
     --bg-color:#f4f6fa;
     --purple: #a729f5;
@@ -157,6 +159,13 @@ main{
 }
 
 .alternativas label:has(input:checked){
+    outline: 3px solid var(--purple);
+    
+    & span{
+        background: var(--purple);
+        color: var(--white);
+    }
+
 
 }
 
