adicionado o efeito para alternativas corretas e erradas

--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -160,7 +160,7 @@ main{
 
 .alternativas label:has(input:checked){
     outline: 3px solid var(--purple);
-    
+
     & span{
         background: var(--purple);
         color: var(--white);
@@ -168,6 +168,26 @@ main{
 
 
 }
+
+.alternativas label#correta{
+    outline: 3px solid var(--green);
+
+    & span{
+        background: var(--green);
+        color: var(--white);
+    }
+}
+
+.alternativas label#errada{
+    outline: 3px solid var(--red);
+
+    & span{
+        background: var(--red);
+        color: var(--white);
+    }
+}
+
+
 
 
 .alternativas input{
