--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -230,6 +230,23 @@ main{
 
 
 @media (min-width:1100px){
+
+    header{
+        margin-block: 81px;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
+
+    .assunto_icone{
+        width: 56px;
+        height: 56px;
+        padding: 8px;
+    }
+
+    .assunto h1{
+        font-size: 28px;
+    }
+
     .tema{
         gap: 16px;
     }
@@ -248,4 +265,54 @@ main{
         height: 20px;
     }
 
+    main{
+        max-width: 1160px;
+        margin-inline: auto;
+
+        display: flex;
+        gap: 130px;
+    }
+
+    section{
+        width: 100%;
+    }
+
+    .pergunta{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .pergunta p{
+        font-size: 20px;
+        line-height: 30px;
+        margin-bottom: 27px;
+    }
+
+    .pergunta h2{
+        font-size: 36px;
+        line-height: 42px;
+    }
+
+    .alternativas form{
+        gap: 24px;
+        margin-bottom: 24px;
+    }
+
+    .alternativas label{
+        font-size: 22px;
+        padding: 18px 20px;
+    }
+
+    .alternativas div{
+        gap: 32px;
+    }
+
+    .alternativas div span{
+        width: 56px;
+        height: 56px;
+        font-size: 28px;
+    }
 }
+
+
