--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ header{
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
+    margin-block: 81px;
+    max-width: 1160px;
+
 }
 
 .tema{
