--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -18,6 +18,7 @@
     --button-bg:#fff;
     --bg-color:#f4f6fa;
     --purple: #a729f5;
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color:#313e51;
     --secundary-text-color:#626c7f;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
@@ -153,13 +154,24 @@ main{
     padding: 12px;
     font-size: 18px;
     font-weight: 500;
-    border-radius: 12px;
+    border-radius: 24px;
     box-shadow: var(--shadow);
     color: var(--primary-text-color);
+    cursor: pointer;
+
 }
+
+.alternativas label:hover{
+    & span{
+        background: var(--bg-acessibilidade);
+        color: var(--purple);
+    }
+}
+
 
 .alternativas label:has(input:checked){
     outline: 3px solid var(--purple);
+    font-weight: 500;
 
     & span{
         background: var(--purple);
@@ -226,6 +238,13 @@ main{
     font-size:18px;
     font-weight: 500;
 }
+
+.alternativas button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
 
 
 
