--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -13,7 +13,7 @@
     --purple: #a729f5;
     --purple-hover: rgba(167, 41, 245, 0.7);
     --white: #fff;
-    --button-bg: #fff;
+    --pontuacao-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
@@ -25,6 +25,8 @@
     --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
+    --pontuacao-bg: #3b4d66;
+
 }
 
 body.escuro {
@@ -52,9 +54,45 @@ header {
     padding: 16px 24px;
 }
 
-body {
-    height: 100svh;
-    background: var(--bg-mobile) var(--bg-color);
-    background-repeat: no-repeat;
-    background-size: cover;
+main {
+    padding: 32px 24px;
+}
+
+main h2{
+    font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color);
+    margin-bottom: 40px;
+}
+
+main h2 strong {
+    font-weight: 500;
+}
+
+.pontuacao {
+    background: var(--pontuacao-bg);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    border-radius: 12px;
+    margin-bottom: 12px;
+}
+
+.pontuacao strong {
+    font-size: 88px;
+    color: var(--primary-text-color);
+    font-weight: 500;
+}
+
+.pontuacao p {
+    color: var(--secondary-text-color);
+    font-size: 18px;
+}
+
+@media(min-width: 1100px) {
+    body {
+        background: var(--bg-desktop) var(--bg-color);
+    }
 }
