estilização do botão da página de resultados

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -69,6 +69,25 @@ main h2 strong {
     font-weight: 500;
 }
 
+main button {
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+
+    font-size: 18px;
+    font-weight: 500;
+    transition: background 0.3s;
+}
+
+main button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
+}
+
+
 .pontuacao {
     background: var(--pontuacao-bg);
     padding: 32px;
