ajuste do h2 da página resultados para desktop

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -5,7 +5,6 @@
     font-family: "Rubik", sans-serif;
     -webkit-font-snoothing: antialiased;
 }
-
 :root {
     --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
@@ -25,10 +24,7 @@
     --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
-    --pontuacao-bg: #3b4d66;
-
 }
-
 body.escuro {
     --bg-color: #313e51;
     --color-span: #313e51;
@@ -36,58 +32,75 @@ body.escuro {
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
     --secondary-text-color: #abc1e1;
-    --button-bg: #3b4d66;
+    --pontuacao-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
-
 body {
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-
 header {
     display: flex;
     justify-content: space-between;
     padding: 16px 24px;
 }
-
+.assunto {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.assunto_icone {
+    background: var(--bg-acessibilidade);
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.assunto_icone img {
+    width: 100%;
+}
+.assunto h1 {
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--primary-text-color);
+}
+.tema {
+    padding: 8px 0;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.tema img {
+    width: 16px;
+}
+.tema button {
+    height: 20px;
+    width: 32px;
+    background: var(--purple);
+    border: 0;
+    border-radius: 999px;
+    padding: 4px;
+}
+.tema button div {
+    background: var(--white);
+    width: 12px;
+    height: 12px;
+    border-radius: 999px;
+}
 main {
     padding: 32px 24px;
 }
-
 main h2{
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
     margin-bottom: 40px;
 }
-
 main h2 strong {
     font-weight: 500;
 }
-
-main button {
-    padding: 16px;
-    border-radius: 12px;
-    border: none;
-    background: var(--purple);
-    color: var(--white);
-    width: 100%;
-
-    font-size: 18px;
-    font-weight: 500;
-    transition: background 0.3s;
-}
-
-main button:hover {
-    background: var(--purple-hover);
-    cursor: pointer;
-}
-
-
 .pontuacao {
     background: var(--pontuacao-bg);
     padding: 32px;
@@ -98,20 +111,77 @@ main button:hover {
     border-radius: 12px;
     margin-bottom: 12px;
 }
-
 .pontuacao strong {
     font-size: 88px;
     color: var(--primary-text-color);
     font-weight: 500;
 }
-
 .pontuacao p {
     color: var(--secondary-text-color);
     font-size: 18px;
 }
-
+main button {
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    transition: background 0.3s;
+}
+main button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
+}
 @media(min-width: 1100px) {
     body {
         background: var(--bg-desktop) var(--bg-color);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    header {
+        margin-block: 81px;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
+    .assunto_icone {
+        width: 56px;
+        height: 56px;
+        padding: 8px;
+    }
+    .assunto h1 {
+        font-size: 28px;
+    }
+    .tema {
+        gap: 16px;
+    }
+    .tema img {
+        width: 24px;
+    }
+    .tema button {
+        width: 48px;
+        height: 28px;
+    }
+    .tema button div {
+        width: 20px;
+        height: 20px;
+    }
+
+    main {
+        display: flex;
+        gap: 140px;
+        max-width: 1160px;
+        margin-inline: auto;
+    }
+
+    main h2,
+    main > div {
+        width: 100%;
+    }
+
+    main h2 {
+        font-size: 64px;
     }
 }
