ajuste do box shadow do resultado

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -20,8 +20,6 @@
     --bg-acessibilidade: #f6e7ff;
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
-    --green: #26d782;
-    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
@@ -110,6 +108,8 @@ main h2 strong {
     gap: 16px;
     border-radius: 12px;
     margin-bottom: 12px;
+    box-shadow: var(--shadow);
+
 }
 .pontuacao strong {
     font-size: 88px;
