adição do javascript do quiz.html para trocar o tema

--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -80,6 +80,9 @@ header {
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+    cursor: pointer;
+
 }
 .tema button div {
     background: var(--white);
