--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -93,6 +93,9 @@ header{
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+    cursor: pointer;
+
 }
 
 .tema button div{
