adicionada a função para escolher o tema do index.html

--- a/style.css
+++ b/style.css
@@ -124,6 +124,8 @@ main{
     font-size: 18px;
     font-weight: 500;
     color: var(--primary-text-color);
+    cursor: pointer;
+
 }
 
 .assuntos button div{
