adicionada a função de inserir resultado

--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -1,64 +1,63 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smoothing: antialised;
+    -webkit-font-snoothing: antialiased;
 }
 
-:root{
-    --bg-html:#fff1e9;
-    --bg-css:#e0fdef;
-    --bg-js:#ebf0ff;
-    --bg-acessibilidade: #f6e7ff;
+:root {
+    --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
     --color-span: #626c7f;
-    --shadow: 0px 16px 40px 0px rgba(143, 60, 193, 0.14);
-    --white:#fff;
-    --green:#26d782;
-    --red:#ee5454;
-    --button-bg:#fff;
-    --bg-color:#f4f6fa;
     --purple: #a729f5;
     --purple-hover: rgba(167, 41, 245, 0.7);
-    --primary-text-color:#313e51;
-    --secundary-text-color:#626c7f;
+    --white: #fff;
+    --button-bg: #fff;
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --bg-html: #fff1e9;
+    --bg-css: #e0fdef;
+    --bg-javacript: #ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
+    --primary-text-color: #313e51;
+    --secondary-text-color: #626c7f;
+    --green: #26d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
 
-body.escuro{
+body.escuro {
     --bg-color: #313e51;
     --color-span: #313e51;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secundary-text-color: #abc1e1;
+    --secondary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
-body{
-    height: 100vh;
+body {
+    height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     padding: 16px 24px;
 }
 
-.assunto{
+.assunto {
     display: flex;
     align-items: center;
     gap: 16px;
 }
 
-.assunto_icone{
-    background: var(--bg-acessibilidade);
+.assunto_icone {
     width: 40px;
     height: 40px;
     padding: 5px;
@@ -81,30 +80,28 @@ header{
     background: var(--bg-acessibilidade);
 }
 
-
-
-.assunto_icone img{
+.assunto_icone img {
     width: 100%;
 }
 
-.assunto h1{
+.assunto h1 {
     font-size: 18px;
     font-weight: 500;
     color: var(--primary-text-color);
 }
 
-.tema{
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -113,130 +110,110 @@ header{
     padding: 4px;
     display: flex;
     cursor: pointer;
-
 }
 
-.tema button div{
+.tema button div {
     background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
 
-main{
+main {
     padding: 32px 24px;
 }
 
-.pergunta{
+.pergunta {
     margin-bottom: 40px;
 }
 
-
-.pergunta p{
+.pergunta p {
     font-style: italic;
     font-size: 14px;
-    background: var(--button-bg);
-    height: 16px;
-    padding: 4px;
-    border-radius: 999px ;
-
+    color: var(--secondary-text-color);
+    margin-bottom: 12px;
 }
 
-.pergunta h2{
+.pergunta h2 {
     font-size: 20px;
     font-weight: 500;
     color: var(--primary-text-color);
     line-height: 24px;
     margin-bottom: 24px;
 }
-
-.barra_progresso{
+.barra_progresso {
     background: var(--button-bg);
     height: 16px;
     padding: 4px;
-    border-radius: 999px ;
+    border-radius: 999px;
 }
 
-.barra_progresso div{
+.barra_progresso div {
     height: 100%;
     background: var(--purple);
     border-radius: 999px;
-    margin-bottom: 12px;
-
 }
 
-.alternativas form{
+.alternativas form {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    margin-bottom: 12px;
 }
 
-.alternativas label{    
+.alternativas label {
     display: block;
     background: var(--button-bg);
     padding: 12px;
     font-size: 18px;
     font-weight: 500;
-    border-radius: 24px;
+    border-radius: 12px;
     box-shadow: var(--shadow);
     color: var(--primary-text-color);
     cursor: pointer;
-
 }
 
-.alternativas label:hover{
-    & span{
+.alternativas label:hover {
+    & span {
         background: var(--bg-acessibilidade);
         color: var(--purple);
     }
 }
 
-
-.alternativas label:has(input:checked){
+.alternativas label:has(input:checked) {
     outline: 3px solid var(--purple);
-    font-weight: 500;
 
-    & span{
+    & span {
         background: var(--purple);
         color: var(--white);
     }
-
-
 }
 
-.alternativas label#correta{
+.alternativas label#correta {
     outline: 3px solid var(--green);
 
-    & span{
+    & span {
         background: var(--green);
         color: var(--white);
     }
 }
 
-.alternativas label#errada{
+.alternativas label#errada {
     outline: 3px solid var(--red);
 
-    & span{
+    & span {
         background: var(--red);
         color: var(--white);
     }
 }
 
-
-
-
-.alternativas input{
-    display: none;
-}
-
-.alternativas div{
+.alternativas div {
     display: flex;
     align-items: center;
     gap: 16px;
-
 }
 
-.alternativas div span{
+.alternativas div span {
     display: block;
     width: 40px;
     height: 40px;
@@ -250,18 +227,21 @@ main{
     flex-shrink: 0;
 }
 
-.alternativas button{
-    padding: 12px;
+.alternativas input {
+    display: none;
+}
+
+.alternativas button {
+    padding: 16px;
     border-radius: 12px;
     border: none;
     background: var(--purple);
     color: var(--white);
     width: 100%;
 
-    font-size:18px;
+    font-size: 18px;
     font-weight: 500;
     transition: background 0.3s;
-
 }
 
 .alternativas button:hover {
@@ -269,11 +249,7 @@ main{
     cursor: pointer;
 }
 
-
-
-
-@media (min-width:1100px){
-
+@media(min-width: 1100px) {
     body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
@@ -281,44 +257,41 @@ main{
     }
 
 
-    header{
+    header {
         margin-block: 81px;
         max-width: 1160px;
         margin-inline: auto;
     }
 
-    
-
-    .assunto_icone{
+    .assunto_icone {
         width: 56px;
         height: 56px;
         padding: 8px;
     }
 
-
-    .assunto h1{
+    .assunto h1 {
         font-size: 28px;
     }
 
-    .tema{
+    .tema {
         gap: 16px;
     }
 
-    .tema img{
+    .tema img {
         width: 24px;
     }
 
-    .tema button{
+    .tema button {
         width: 48px;
         height: 28px;
     }
 
-    .tema button div{
+    .tema button div {
         width: 20px;
         height: 20px;
     }
 
-    main{
+    main {
         max-width: 1160px;
         margin-inline: auto;
 
@@ -326,46 +299,49 @@ main{
         gap: 130px;
     }
 
-    section{
+    section {
         width: 100%;
     }
 
-    .pergunta{
+    .pergunta {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
-    .pergunta p{
+    .pergunta p {
         font-size: 20px;
         line-height: 30px;
         margin-bottom: 27px;
     }
 
-    .pergunta h2{
-        font-size: 36px;
+    .pergunta h2 {
+        font-size: 32px;
         line-height: 42px;
     }
 
-    .alternativas form{
+    .alternativas form {
         gap: 24px;
         margin-bottom: 24px;
     }
 
-    .alternativas label{
+    .alternativas label {
         font-size: 22px;
         padding: 18px 20px;
+        border-radius: 24px;
     }
 
-    .alternativas div{
+    .alternativas div {
         gap: 32px;
     }
 
-    .alternativas div span{
+    .alternativas div span {
         width: 56px;
         height: 56px;
         font-size: 28px;
     }
+
+    .alternativas button {
+        font-size: 22px;
+    }
 }
-
-
