--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -5,6 +5,7 @@
     font-family: "Rubik", sans-serif;
     -webkit-font-snoothing: antialiased;
 }
+
 :root {
     --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
@@ -23,6 +24,7 @@
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
+
 body.escuro {
     --bg-color: #313e51;
     --color-span: #313e51;
@@ -33,46 +35,70 @@ body.escuro {
     --pontuacao-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
+
 body {
     height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 header {
     display: flex;
     justify-content: space-between;
     padding: 16px 24px;
 }
+
 .assunto {
     display: flex;
     align-items: center;
     gap: 16px;
 }
+
 .assunto_icone {
-    background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
+
+.assunto_icone.html {
+    background: var(--bg-html);
+}
+
+.assunto_icone.css {
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript {
+    background: var(--bg-javacript);
+}
+
+.assunto_icone.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
 .assunto_icone img {
     width: 100%;
 }
+
 .assunto h1 {
     font-size: 18px;
     font-weight: 500;
     color: var(--primary-text-color);
 }
+
 .tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
+
 .tema img {
     width: 16px;
 }
+
 .tema button {
     height: 20px;
     width: 32px;
@@ -82,26 +108,30 @@ header {
     padding: 4px;
     display: flex;
     cursor: pointer;
-
 }
+
 .tema button div {
     background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
+
 main {
     padding: 32px 24px;
 }
+
 main h2{
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
     margin-bottom: 40px;
 }
+
 main h2 strong {
     font-weight: 500;
 }
+
 .pontuacao {
     background: var(--pontuacao-bg);
     padding: 32px;
@@ -112,17 +142,19 @@ main h2 strong {
     border-radius: 12px;
     margin-bottom: 12px;
     box-shadow: var(--shadow);
-
 }
+
 .pontuacao strong {
     font-size: 88px;
     color: var(--primary-text-color);
     font-weight: 500;
 }
+
 .pontuacao p {
     color: var(--secondary-text-color);
     font-size: 18px;
 }
+
 main button {
     padding: 16px;
     border-radius: 12px;
@@ -130,43 +162,55 @@ main button {
     background: var(--purple);
     color: var(--white);
     width: 100%;
+
     font-size: 18px;
     font-weight: 500;
     transition: background 0.3s;
+    box-shadow: var(--shadow);
 }
+
 main button:hover {
     background: var(--purple-hover);
     cursor: pointer;
 }
+
 @media(min-width: 1100px) {
     body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
     }
+
+
     header {
         margin-block: 81px;
         max-width: 1160px;
         margin-inline: auto;
     }
+
     .assunto_icone {
         width: 56px;
         height: 56px;
         padding: 8px;
     }
+
     .assunto h1 {
         font-size: 28px;
     }
+
     .tema {
         gap: 16px;
     }
+
     .tema img {
         width: 24px;
     }
+
     .tema button {
         width: 48px;
         height: 28px;
     }
+
     .tema button div {
         width: 20px;
         height: 20px;
@@ -206,5 +250,4 @@ main button:hover {
         padding: 24px;
         border-radius: 24px;
     }
-
 }
