ajuste das funções de assunto para funcionar em todos os dispositivos

--- a/style.css
+++ b/style.css
@@ -1,67 +1,64 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smoothing: antialised;
-
+    -webkit-font-snoothing: antialiased;
 }
 
-:root{
-    --bg-html:#fff1e9;
-    --bg-css:#e0fdef;
-    --bg-js:#ebf0ff;
-    --bg-acessibilidade: #f6e7ff;
-    --shadow: 0px 16px 40px 0px rgba(143, 60, 193, 0.14);
-    --white:#fff;
-    --button-bg:#fff;
-    --bg-color:#f4f6fa;
-    --primary-text-color:#313e51;
-    --secundary-text-color:#626c7f;
+:root {
+    --bg-color: #f4f6fa;
     --purple: #a729f5;
+    --white: #fff;
+    --button-bg: #fff;
+    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --bg-html: #fff1e9;
+    --bg-css: #e0fdef;
+    --bg-javacript: #ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
+    --primary-text-color: #313e51;
+    --secondary-text-color: #626c7f;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg);
-
 }
 
-body.escuro{
+body.escuro {
     --bg-color: #313e51;
     --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secundary-text-color: #abc1e1;
+    --secondary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
-body{
-    height: 100vh;
+body {
+    height: 100svh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-header{
+header {
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
     max-width: 1160px;
     margin-inline: auto;
-
 }
 
-.tema{
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -70,49 +67,48 @@ header{
     padding: 4px;
     display: flex;
     cursor: pointer;
-
-
 }
 
-.tema button div{
+.tema button div {
     background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
 
-main{
+main {
     padding: 32px 24px;
 }
 
-.boas_vindas{
+.boas_vindas {
     margin-bottom: 40px;
 }
 
-.boas_vindas h1{
+.boas_vindas h1 {
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
     margin-bottom: 16px;
 }
-.boas_vindas h1 strong{
+
+.boas_vindas h1 strong {
     font-weight: 500;
 }
 
-.boas_vindas p{
-    color: var(--secundary-text-color);
+.boas_vindas p {
+    color: var(--secondary-text-color);
     font-size: 14px;
     line-height: 150%;
     font-style: italic;
 }
 
-.assuntos{
+.assuntos {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.assuntos button{
+.assuntos button {
     border: none;
     background: var(--button-bg);
     display: flex;
@@ -125,97 +121,97 @@ main{
     font-weight: 500;
     color: var(--primary-text-color);
     cursor: pointer;
-
 }
 
-.assuntos button div{
+.assuntos button div {
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
 
-.assuntos button img{
+.assuntos button img {
     width: 100%;
 }
 
-.botao_html div{
+.botao_html div {
     background: var(--bg-html);
 }
 
-.botao_css div{
+.botao_css div {
     background: var(--bg-css);
 }
-.botao_js div{
-    background: var(--bg-js);
+
+.botao_javascript div {
+    background: var(--bg-javacript);
 }
-.botao_acessibilidade div{
+
+.botao_acessibilidade div {
     background: var(--bg-acessibilidade);
 }
 
-@media (min-width: 1100px){
-    body{
+@media(min-width: 1100px) {
+    body {
         background: var(--bg-desktop) var(--bg-color);
-        background: cover;
+        background-size: cover;
         background-repeat: no-repeat;
     }
 
-    header{
+    header {
         margin-block: 81px;
+
     }
 
-    .tema{
+    .tema {
         gap: 16px;
     }
 
-    .tema img{
+    .tema img {
         width: 24px;
     }
 
-    .tema button{
+    .tema button {
         width: 48px;
         height: 28px;
     }
 
-    .tema button div{
+    .tema button div {
         width: 20px;
         height: 20px;
     }
 
-    main{
+    main {
         display: flex;
         max-width: 1160px;
         margin-inline: auto;
     }
 
-    section{
+    section {
         width: 100%;
-
     }
 
-    .boas_vindas h1{
+    .boas_vindas h1 {
         font-size: 64px;
         margin-bottom: 48px;
     }
 
-    .boas_vindas p{
+    .boas_vindas p {
         font-size: 20px;
     }
 
-    .assuntos{
+    .assuntos {
         gap: 24px;
     }
 
-    .assuntos button{
+    .assuntos button {
         font-size: 28px;
         padding: 20px;
         gap: 32px;
     }
 
-    .assuntos button div{
+    .assuntos button div {
         width: 56px;
         height: 56px;
         padding: 8px;
     }
-
 }
